import Foundation


//MARK: Accessibility


public enum AccessibilityId {
  
}


public extension AccessibilityId {
    
    enum FamilyListPage: String {
        case textTitle
        case buttonAdd
        case textFieldAdd
    }
}
